--- a/TourOperator.Api/appsettings.json
+++ b/TourOperator.Api/appsettings.json
@@ -2,6 +2,11 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=45.85.146.19;Database=webhook;User Id=sa;Password=abc123"
   },
+  "Kafka": {
+    "BootstrapServers": "45.85.146.19:9092",
+    "ClientId": "P",
+    "GroupId": "foo"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
